# sql-nav-bench

./: .gitignore  LICENSE  README.md  pyproject.toml  repos.yml
docs/: 2026-04-03-runner-design.md  2026-04-03-sql-nav-bench-design.md
docs/plans/: 2026-04-03-runners.md  2026-04-03-runners.md.tasks.json  2026-04-03-sql-nav-bench.md  2026-04-03-sql-nav-bench.md.tasks.json
results/baseline/: jaffle-mesh_impact_01.yml  jaffle-mesh_impact_02.yml  jaffle-mesh_lineage_01.yml  jaffle-mesh_lineage_02.yml  jaffle-mesh_mesh_01.yml  jaffle-mesh_mesh_02.yml  jaffle-mesh_mesh_03.yml  jaffle-mesh_ref_01.yml  jaffle-mesh_ref_02.yml  jaffle-mesh_reindex_01.yml  mozilla-bigquery_impact_01.yml  mozilla-bigquery_impact_02.yml  mozilla-bigquery_impact_03.yml  mozilla-bigquery_lineage_01.yml  mozilla-bigquery_lineage_02.yml  mozilla-bigquery_lineage_03.yml  mozilla-bigquery_ref_01.yml  mozilla-bigquery_ref_02.yml  mozilla-bigquery_ref_03.yml  mozilla-bigquery_reindex_01.yml  sqlmesh-examples_impact_01.yml  sqlmesh-examples_impact_02.yml  sqlmesh-examples_lineage_01.yml  sqlmesh-examples_lineage_02.yml  sqlmesh-examples_lineage_03.yml  sqlmesh-examples_mesh_01.yml  sqlmesh-examples_mesh_02.yml  sqlmesh-examples_ref_01.yml  sqlmesh-examples_ref_02.yml  sqlmesh-examples_reindex_01.yml
src/sql_nav_bench/: __init__.py  (+6 more)
tests/: test_baseline_runner.py  test_cli.py  test_extract.py  test_integration.py  test_loader.py  test_models.py  test_report.py  test_run_command.py  test_runners_init.py  test_scorer.py  test_setup.py  test_sqlprism_cli_runner.py
tools/: baseline.yml  sqlprism.yml
(+89 files in other folders)
