[project]
name = "sql-nav-bench"
version = "0.1.0"
description = "Benchmark for evaluating agent SQL project understanding"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
sql-nav-bench = "sql_nav_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sql_nav_bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
